--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+jdcal 1.3
+
+    Use setuptools instead of distutils. This enables package managers to
+    create Python wheels.
+
+    See PR #7.jdcal 1.2.
+
 jdcal 1.2
 
     No change in functionalities.
