--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+UNRELEASED
+
+    Add universal wheel distribution.
+
 jdcal 1.3
 
     Use setuptools instead of distutils. This enables package managers to
