--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+UNRELEASED
+
+    Add universal wheel distribution.
+
 jdcal 1.3
 
     Use setuptools instead of distutils. This enables package managers to
@@ -20,6 +24,6 @@ jdcal 1.0.1
 
     This version has exactly the same code as in jdcal 1.0, except the
     tar file has LICENSE.txt in it.
-
-    See issue #5 (https://github.com/phn/jdcal/issues/5) for why version this
+    
+    See issue #5 (https://github.com/phn/jdcal/issues/5) for why this version
     was created.
